--- a/index.html
+++ b/index.html
@@ -6,36 +6,21 @@
     <title>Festejando a Independência de Campo</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>oie</h1>
-<p>oi</p>
+<h1>PROJETO AGRINHO</h1>
+<p>Festejando Conexao Campo Cidade</p>
 <body>
     <header>
-        <h1>Comemoração da Independência de Campo</h1>
-        <nav>
-            <ul>
-                <li><a href="#historia">História</a></li>
-                <li><a href="#eventos">Eventos</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-
+       
     <section id="historia">
-        <h2>A História de Campo</h2>
-        <p>Campo foi fundado em... (adicione a história aqui).</p>
+        <h2>A História do Campo</h2>
+        <p>O termo “homem do campo” refere-se a um indivíduo que vive e trabalha em áreas rurais, geralmente envolvido em atividades relacionadas à agricultura, pecuária e outras práticas agropecuárias. Este profissional desempenha um papel crucial na produção de alimentos, na preservação do meio ambiente e na manutenção das tradições culturais ligadas ao campo. O homem do campo é frequentemente associado a um estilo de vida mais simples e próximo da natureza, onde as relações interpessoais e a comunidade têm grande importância..</p>
     </section>
+       </header>
 
-    <section id="eventos">
-        <h2>Eventos Comemorativos</h2>
-        <ul>
-            <li>Desfile da Independência - 7 de setembro</li>
-            <li>Show de Fogos - 8 de setembro</li>
-            <li>Feira de Artesanato - 9 de setembro</li>
-        </ul>
-    </section>
-
+        <h2>Dia do produtor</h2>
+        <p>O homem do campo é um pilar da economia local, pois suas atividades geram emprego e renda para muitas famílias. A produção rural não apenas abastece o mercado local, mas também contribui para a economia nacional através da exportação de produtos agrícolas. O fortalecimento das cooperativas e associações rurais é uma estratégia importante para aumentar a competitividade do homem do campo, permitindo que ele tenha maior poder de negociação e acesso a mercados mais amplos.
     <section id="contato">
-        <h2>Entre em Contato</h2>
+        <h2>Entre em Contato para saber mais e escrever a sua experiência como um produtor rural</h2>
         <form action="#" method="post">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
